--- a/.github/workflows/step_01.yml
+++ b/.github/workflows/step_01.yml
@@ -1,57 +1,21 @@
-name: Step 01 - Build
+name: 'Workflow 1: workflow dispatch event'
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches-ignore:
-      - gh-pages
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Name of the person to greet'
+        required: true
+        default: 'SSD-Team'
 
 jobs:
-  build:
-    name: 'Build'
+  greet:
+    name: 'Meet and greet the team'
 
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'Checkout repository'
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: 'Setup project-specific Node.js version'
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: 'Install dependencies (via npm)'
+      - name: 'Greetings!'
         shell: bash
         run: |
-          npm install
-
-  test:
-    name: 'Test'
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: 'Checkout repository'
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: 'Setup project-specific Node.js version'
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: 'Install dependencies (via npm)'
-        shell: bash
-        run: |
-          npm install
-
-      - name: 'Run tests'
-        shell: bash
-        run: |
-          npm run test
+          echo "Hello, ${{ github.event.inputs.name }}!"
