add some more context information

--- a/.github/workflows/step_01.yml
+++ b/.github/workflows/step_01.yml
@@ -16,6 +16,7 @@ jobs:
 
     steps:
       - name: 'Greetings!'
-        shell: bash
-        run: |
-          echo "Hello, ${{ github.event.inputs.name }}!"
+        run: echo "Hello, ${{ github.event.inputs.name }}!"
+      - run: echo "🎉 The job was triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."        
