--- a/.github/workflows/step_02.yml
+++ b/.github/workflows/step_02.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           expr 3 + 7 > math-homework.txt
 
-      - name: 'Upload math result for job 1'
+      - name: 'Upload math result for job calc_01'
         uses: actions/upload-artifact@v4
         with:
           name: homework_pre
@@ -25,7 +25,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Download math result for job 1
+      - name: Download math result from job calc_01
         uses: actions/download-artifact@v4
         with:
           name: homework_pre
@@ -35,7 +35,7 @@ jobs:
           value=`cat math-homework.txt`
           expr $value \* 9 > math-homework.txt
 
-      - name: Upload math result for job 2
+      - name: Upload math result for job calc_02
         uses: actions/upload-artifact@v4
         with:
           name: homework_final
@@ -47,7 +47,7 @@ jobs:
     runs-on: macOS-latest
 
     steps:
-      - name: Download math result for job 2
+      - name: Download math result from job calc_02
         uses: actions/download-artifact@v4
         with:
           name: homework_final
