--- a/.github/workflows/step_03.yml
+++ b/.github/workflows/step_03.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version-file: '.nvmrc'
       - run: npm install
       - run: npm run build --if-present
 
@@ -36,7 +36,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version-file: '.nvmrc'
       - run: npm install
       - run: npm run build --if-present
       - run: npm test
