--- a/.github/workflows/step_03.yml
+++ b/.github/workflows/step_03.yml
@@ -27,6 +27,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: 'Checkout repository'
         uses: actions/checkout@v4
